<resources>
    <string name="app_name">Adote Uma Carta</string>
    <string name="text_01">ADOTE UMA CARTA E FAÇA UMA CRIANÇA FELIZ NESTE NATAL</string>

    <string name="btn_escola">ESCOLAS</string>
    <string name="btn_carta">PRESENTES</string>
    <string name="btn_cadastro">CADASTRO</string>
    <string name="btn_consulta">DOADORES</string>
    <string name="btn_capture_image">Capturar Foto</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_salvar">SALVAR</string>
    <string name="btn_excluir">EXCLUIR</string>
    <string name="btn_fechar">FECHAR</string>

    <string name="dlg_delete_tittle">ATENÇÃO!</string>
    <string name="dlg_excluir">Tem certeza que deseja excluir esse registro?</string>
    <string name="dlg_positivo">Sim, excluir cadastro</string>
    <string name="dlg_negativo">Cancelar exclusão</string>
    <string name="dlg_toast_delete">Registro excluído!</string>
    <string name="dlg_toast_cancel">Ação cancelada</string>

    <string name="label_principal">Adote uma Carta - 2019</string>
    <string name="label_escola">Lista de Escolas Cadastradas 2019</string>
    <string name="label_carta">Cartas dos Alunos</string>

    <string name="img_santa">Papai Noel</string>

    <string name="splash_text">FAÇA UMA CRIANÇA FELIZ NESSE NATAL!</string>

    <string name="titulo_incluindo">Incluindo Doador</string>
    <string name="titulo_editando">Editando Doador</string>
    <string name="obrigatorio">Campo obrigatório</string>

    <string name="hint_nome">Digite o nome</string>
    <string name="hint_cell">Digite o celular</string>
    <string name="hint_gift">Presente</string>
    <string name="hint_status">Status da entrega</string>

</resources>
