<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradbg"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/img_santa"
        android:src="@drawable/santa_mail_icon" />

    <TextView
        android:id="@+id/text_01"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginStart="25dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:text="@string/text_01"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
         />

    <Button
        android:id="@+id/btn_escola"
        android:textStyle="bold"
        android:text="@string/btn_escola"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_01"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/roundbtn"
         />

    <Button
        android:id="@+id/btn_carta"
        android:textStyle="bold"
        android:text="@string/btn_carta"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_01"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/roundbtn"
        android:layout_toEndOf="@id/btn_escola" />

    <Button
        android:id="@+id/btn_cadastro"
        android:textStyle="bold"
        android:text="@string/btn_cadastro"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_carta"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/roundbtn"
         />

    <Button
        android:id="@+id/btn_consulta"
        android:textStyle="bold"
        android:text="@string/btn_consulta"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_carta"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/roundbtn"
        android:layout_toEndOf="@id/btn_cadastro" />

</RelativeLayout>