<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradbg">


    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:hint="@string/hint_nome"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editTextCell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNome"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:hint="@string/hint_cell"
        android:inputType="phone"/>

  <android.support.v7.widget.AppCompatSpinner
      android:id="@+id/spinnerGift"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/editTextCell"
      android:layout_marginTop="10dp"
      android:layout_marginStart="40dp"
      android:hint="@string/hint_gift"
      android:backgroundTint="#FFFFFF"
      android:textSize="18sp"
      android:textColor="#FFFFFF"
      android:spinnerMode="dropdown"/>
    
    <!--  <EditText
        android:id="@+id/editTextGift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCell"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:hint="@string/hint_gift"
        android:inputType="text"/> -->

    <EditText
        android:id="@+id/editTextStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerGift"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:hint="@string/hint_status"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbtn"
        android:text="@string/btn_cancelar"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/editTextStatus"/>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbtn"
        android:text="@string/btn_salvar"
        android:layout_alignBottom="@id/btnCancelar"
        android:layout_toEndOf="@id/btnCancelar"
        android:layout_marginStart="14dp" />

    <Button
        android:id="@+id/btnExcluir"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbtn"
        android:text="@string/btn_excluir"
        android:layout_alignBottom="@id/btnSalvar"
        android:layout_toEndOf="@id/btnSalvar"
        android:layout_marginStart="14dp" />
</RelativeLayout>